# promptLedger

./: .gitignore  DEPLOYMENT.md  ENVIRONMENT.md  OPERATIONS.md  PHASE_3_SUMMARY.md  PRODUCTIZATION_BACKLOG.md  PROMPTLEDGER_ADVANCED_ROADMAP.md  README.md  docker-compose.local.yml  docker-compose.logs.yml  docker-compose.prod.yml  logstash.conf  promptledger_implementation_v2.md  rebuild_backend_cors_fix.cmd  start_project_wt.bat  tmp_payload.json  tmp_payload2.json  tmp_payload3.json
.github/workflows/: deploy.yml
aws/terraform/: main.tf  terraform.tfvars  user_data_backend.sh  user_data_backend_docker.sh  user_data_frontend.sh  user_data_logs.sh  user_data_logs_docker.sh  variables.tf
backend/: .env  .env.grok  Dockerfile  GITHUB_INTEGRATION_RUNBOOK.md  alembic.ini  requirements.txt  run_smoke_min.py  smoke_result.json  smoke_validate.py  validate_p2.py
backend/alembic/: env.py
backend/app/: __init__.py  main.py
backend/app/agents/: base.py  (+6 more)
backend/scripts/: backup_restore.ps1
backend/tests/: fuzz_scoring.py  test_score_parser.py
cli/: pyproject.toml
cli/promptledger/: __init__.py  cli.py  decorators.py  sdk.py
deploy/: ACTION_ITEMS.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE_DETAILED.md  DEPLOYMENT_RUNBOOK.md  DEPLOYMENT_STATUS.md  GITHUB_ACTIONS_SECRETS.md  GITHUB_OAUTH_SETUP.md  QUICK_START_CHECKLIST.md  START_HERE.md  backend.env.template  frontend.env.template
frontend/: next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/lib/: api.ts  dashboard.ts  hooks.ts  websocket.ts
(+54 files in other folders)
